# apps/platform/src/app/controllers/auth/vo/sign-up.dto.ts
@@ -7,6 +7,7 @@ import { OmitType } from '@nestjs/swagger';
 import { UserProfile } from '../../../database/entities';
 import { JwtTokensPayload } from '@softkit/auth';
 import { DEFAULT_CREATE_ENTITY_EXCLUDE_LIST } from '@softkit/typeorm';
+import { Expose } from 'class-transformer';
 
 export class BaseSignUpByEmailRequest extends OmitType(UserProfile, [
   ...DEFAULT_CREATE_ENTITY_EXCLUDE_LIST,
@@ -47,9 +48,18 @@ export class SignUpByEmailResponse {
   /**
    * id of approval entity, for future reuse
    * */
+  @Expose()
   approvalId!: string;
   /**
    * payloads for token generation, useful in case if we want user in without verification
    * */
+  @Expose()
   jwtPayload!: JwtTokensPayload;
+}
+
+export class SignUpByEmailResponseDTO extends OmitType(SignUpByEmailResponse, [
+  'jwtPayload',
+] as const) {
+  @Expose()
+  message!: string;
 }
